--- a/docker/.env
+++ b/docker/.env
@@ -9,19 +9,19 @@ KAFKA_CONNECTION_STRING=PLAINTEXT://${KAFKA_HOST}
 MONGO_CONNECTION_STRING=mongodb://${MONGO_HOST}
 REDIS_CONNECTION_STRING=redis://${REDIS_HOST}
 
-LOGGING_LOGSTASH_TCP_SOCKET_ENABLED=false
+LOGGING_LOGSTASH_TCP_SOCKET_ENABLED="false"
 
-SPRING_CLOUD_SERVICE_REGISTRY_AUTO_REGISTRATION_ENABLED=false
-SPRING_CLOUD_CONSUL_CONFIG_ENABLED=false
-SPRING_CLOUD_DISCOVERY_ENABLED=false
+SPRING_CLOUD_SERVICE_REGISTRY_AUTO_REGISTRATION_ENABLED="false"
+SPRING_CLOUD_CONSUL_CONFIG_ENABLED="false"
+SPRING_CLOUD_DISCOVERY_ENABLED="false"
 SPRING_DATA_MONGODB_DATABASE=mongodb://${MONGO_HOST}
 
 RARIBLE_ETHEREUM_HTTP_URL=${NODE_HOST}
 RARIBLE_ETHEREUM_WEBSOCKET_URL=${NODE_WEB_SOCKET_HOST}
 
-RARIBLE_CORE_APM_AGENT_ENABLED=false
-RARIBLE_CORE_APM_WEB_ENABLED=false
-RARIBLE_CORE_APM_ANNOTATION_ENABLED=false
+RARIBLE_CORE_APM_AGENT_ENABLED="false"
+RARIBLE_CORE_APM_WEB_ENABLED="false"
+RARIBLE_CORE_APM_ANNOTATION_ENABLED="false"
 
 REDIS_URI=${REDIS_CONNECTION_STRING}
 
@@ -29,11 +29,11 @@ REDIS_URI=${REDIS_CONNECTION_STRING}
 ####### Union configuration #######
 
 # union-common
-UNION_INTEGRATION_ETHEREUM_ENABLED=false
-UNION_INTEGRATION_POLYGON_ENABLED=false
-UNION_INTEGRATION_TEZOS_ENABLED=false
-UNION_INTEGRATION_FLOW_ENABLED=false
-UNION_INTEGRATION_SOLANA_ENABLED=false
+UNION_INTEGRATION_ETHEREUM_ENABLED="false"
+UNION_INTEGRATION_POLYGON_ENABLED="false"
+UNION_INTEGRATION_TEZOS_ENABLED="false"
+UNION_INTEGRATION_FLOW_ENABLED="false"
+UNION_INTEGRATION_SOLANA_ENABLED="false"
 UNION_COMMON_DATABASE=protocol-union
 
 # union-api
