add aptos item service

--- a/api/src/main/resources/config/application.yml
+++ b/api/src/main/resources/config/application.yml
@@ -112,6 +112,8 @@ integration:
     client:
       url: ${consul.tezos.api.baseUrl:}
     auctionContracts: ${consul.tezos.auctionContracts:}
+  aptos:
+    enabled: true
   solana:
     enabled: ${consul.solana.enabled:false}
   immutablex:
