--- a/listener/src/main/resources/config/application.yml
+++ b/listener/src/main/resources/config/application.yml
@@ -64,7 +64,7 @@ common:
 
 integration:
   aptos:
-    enabled: false
+    enabled: true
     consumer:
       broker-replica-set: ${kafka.hosts}
     auctionContracts: ${consul.ethereum.auctionContracts:}
