--- a/api/src/main/resources/config/application.yml
+++ b/api/src/main/resources/config/application.yml
@@ -53,8 +53,7 @@ api:
 
 integration:
   aptos:
-    enabled: false
-    auctionContracts: ${consul.ethereum.auctionContracts:}
+    enabled: true
   ethereum:
     enabled: ${consul.ethereum.enabled:false}
     auctionContracts: ${consul.ethereum.auctionContracts:}
