--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -102,10 +102,8 @@ services:
   protocol-mongodb:
     image: mongo:4.0.21
     command: --port 27017 --wiredTigerCacheSizeGB 1
-    ports:
-      - "47017:27017"
     volumes:
-      - protocol-mongodb:/data/db
+      - protocol-mongodb-1:/data/db
     depends_on:
       - "protocol-kafka-1"
 
@@ -113,4 +111,4 @@ volumes:
   protocol-zookeeper-1: {}
   protocol-zookeeper-log-1: {}
   protocol-kafka-1: {}
-  protocol-mongodb: {}
+  protocol-mongodb-1: {}
